--- a/src/components/layout/Navbar.module.css
+++ b/src/components/layout/Navbar.module.css
@@ -3,18 +3,22 @@
     justify-content: space-between;
     background: #222;
     padding: 1em;
+    margin-bottom: 1em;
 }
 
 .navbar img{
-    filter: contrast(150%);
+    filter: contrast(250%);
     user-select: none;
+    width: 70px;
+    height: 70px;
+    filter: drop-shadow(0 0 10px #e96949) brightness(1.3);
 }
 
 .item a::after{
   content: '';
   width: 0%;
   height: 3px;
-  background: linear-gradient(50deg, #ffbb33, #c28100);
+  background: linear-gradient(50deg, #e96949, #8a1607);
   position: absolute;
   border-radius: 2px;
   bottom: -20%;
@@ -50,7 +54,7 @@
 }
 
 .item a:hover{
-  color: #ffbb33;
+  color: #e96949;
 }
   
 
