--- a/src/components/layout/Navbar.module.css
+++ b/src/components/layout/Navbar.module.css
@@ -1,9 +1,10 @@
-.navbar{
-    display: flex;
-    justify-content: space-between;
-    background: #222;
-    padding: 1em;
-    margin-bottom: 1em;
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  background: #222;
+  padding: 1em;
+  margin-bottom: 1em;
+  width: 100%; /* Defina a largura como 100% para ocupar toda a largura disponível */
 }
 
 .navbar img{
@@ -57,6 +58,37 @@
   color: #e96949;
 }
   
+
+@media (max-width:600px) and (max-height:1300px){
+  .navbar {
+    height: 12%;
+  }
+  
+  .navbar img{
+      filter: contrast(250%);
+      user-select: none;
+      width:50px;
+      height: 50px;
+      filter: drop-shadow(0 0 10px #e96949) brightness(1.3);
+      position: relative;
+      bottom: 12px;
+  }
+  
+.item a{
+  font-size: 0.8em;
+}
+.item{
+  bottom: 22px;
+  left:30px;
+}
+ul li:first-child{
+    margin-left: 0.68em;
+  }
+
+}
+
+
+
 
 
 
