--- a/src/components/pages/ArteSacra.module.css
+++ b/src/components/pages/ArteSacra.module.css
@@ -91,5 +91,50 @@
 
 
 
+@media (max-width: 600px) and (max-height: 1300px) {
+    .artesacra_container {
+        width: 100%;
+        display: flex;
+        flex-direction: column; /* Ajuste para garantir que seja uma coluna em telas menores */
+        align-items: center; /* Centralize o conteúdo */
+        padding: 0; /* Ajuste o valor de padding conforme necessário */
+    }
+
+    .artesacra_container h1 {
+        font-size: 1.5em;
+        margin-bottom: .5em;
+    }
+    .artesacra_container .art{
+        font-size: 2.5em;
+        margin-bottom: .5em;
+    }
+    
+    
+    .artesacra_container h2{
+      font-size: 1.05em;
+      margin-bottom: .1em;
+      color: rgb(95, 91, 91);
+    }
+
+    .artesacra_container img {
+        width: 100%;
+        max-width: 200px;
+        margin: 0.5em;
+        border-radius: 20px;
+        transition: .7s;
+    }
+
+    .artesacra_container img:hover {
+        width: 100%;
+        max-width: 200px;
+        margin: 0.5em;
+        border-radius: 20px;
+        box-shadow: none;
+        transform: scale(1.05);
+    }
+}
+
+
+
 
 
