--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,38 @@
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: 'Open Sans', 'sans-serif';
 }
 
-html, body, #root{
+html, body, #root {
   background: #efefef;
   height: 100%;
 }
 
+@media (max-width: 600px) and (max-height: 1300px) {
+  html, body, #root {
+      height: 100%;
+      width: 100%;
+      margin: 0; /* Certifique-se de que não há margens */
+      padding: 0; /* Certifique-se de que não há padding */
+  }
 
+  body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 0; /* Certifique-se de que não há margens */
+      padding: 0; /* Certifique-se de que não há padding */
+  }
 
-
+  html {
+      width: 100%;
+      height: 100%;
+      margin: 0; /* Certifique-se de que não há margens */
+      padding: 0; /* Certifique-se de que não há padding */
+  }
+}
 
 
 
