--- a/src/components/layout/Container.module.css
+++ b/src/components/layout/Container.module.css
@@ -1,3 +1,6 @@
+* {
+    -webkit-tap-highlight-color: transparent;
+}
 .container {
     display: flex;
     justify-content: space-between;
@@ -44,17 +47,6 @@
         justify-content: flex-start;
     }
 }
-
-
-
-
-
-
-
-
-
-
-
 
 
 
