--- a/index.css
+++ b/index.css
@@ -1,18 +1,51 @@
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: 'Open Sans', 'sans-serif';
+  -webkit-tap-highlight-color: transparent;
+}
+/* Estilo da barra de rolagem */
+::-webkit-scrollbar {
+  width: 10px; /* Largura da barra de rolagem */
+  box-shadow: 4px 4px 20px 4px gray;
 }
 
-html, body, #root{
+/* Estilo do indicador de rolagem (thumb) */
+::-webkit-scrollbar-thumb {
+  background-color: #8a1607; /* Cor de fundo do indicador de rolagem */
+}
+
+/* Estilo do indicador de rolagem quando hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #e7341d; /* Cor de fundo do indicador de rolagem ao passar o mouse por cima */
+}
+
+html, body, #root {
   background: #efefef;
   height: 100%;
 }
 
+@media (max-width: 600px) and (max-height: 1300px) {
+  html, body, #root {
+      height: 100%;
+      width: 100%;
+      margin: 0; /* Certifique-se de que não há margens */
+      padding: 0; /* Certifique-se de que não há padding */
+  }
 
+  body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 0; /* Certifique-se de que não há margens */
+      padding: 0; /* Certifique-se de que não há padding */
+  }
 
-
-
-
-
+  html {
+      width: 100%;
+      height: 100%;
+      margin: 0; /* Certifique-se de que não há margens */
+      padding: 0; /* Certifique-se de que não há padding */
+  }
+}
