--- a/src/components/pages/Contact.module.css
+++ b/src/components/pages/Contact.module.css
@@ -56,6 +56,7 @@
   margin-bottom: 1em; /* Ajuste o valor conforme necessário */
   position:relative;
   bottom: 100px;
+  left: 50px;
 }
 
 .qsm .qs {
