--- a/components/pages/Contact.module.css
+++ b/components/pages/Contact.module.css
@@ -57,6 +57,7 @@
   margin-bottom: 1em; /* Ajuste o valor conforme necessário */
   position:relative;
   bottom: 100px;
+  left: 90px;
 }
 
 .qsm .qs {
