--- a/src/components/pages/Home.module.css
+++ b/src/components/pages/Home.module.css
@@ -94,7 +94,7 @@
 }
 
 .project:hover{
-    background: white;
+    background: transparent;
     color: #8a1607;
     border: 1px solid #8a1607;
 }
