--- a/components/pages/Croche.module.css
+++ b/components/pages/Croche.module.css
@@ -1,11 +1,9 @@
 .croche_container{
     width: 100%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 4em;
-    user-select: none;
+    flex-direction: column; /* Ajuste para garantir que seja uma coluna em telas menores */
+    align-items: center; /* Centralize o conteúdo */
+    padding: 0;
 }
 .croche_container h1{
     font-size: 2.5em;
@@ -85,8 +83,72 @@
     margin: 1.2em;
     border-radius: 20px;
     filter: contrast(120%);
-    box-shadow: 4px 4px 20px 4px gray;
 }
+
+.croche_container .astro:hover{
+    width: 550px;
+    margin: 1.2em;
+    border-radius: 20px;
+    filter: contrast(120%);
+    transform: scale(1.1);
+}
+
+
+
+@media (max-width: 600px) and (max-height: 1300px) {
+    .croche_container {
+        width: 100%;
+        display: flex;
+        flex-direction: column; /* Ajuste para garantir que seja uma coluna em telas menores */
+        align-items: center; /* Centralize o conteúdo */
+        padding: 0; /* Ajuste o valor de padding conforme necessário */
+    }
+
+    .croche_container h1 {
+        font-size: 1.5em;
+        margin-bottom: .5em;
+    }
+    .croche_container .crc{
+        font-size: 2.5em;
+        margin-bottom: .5em;
+    }
+    
+    .croche_container p{
+        margin-bottom: 2.5em;
+        color: #7b7b7b;
+    }
+
+    .croche_container img,
+    .croche_container .terezinha,
+    .croche_container .benedito,
+    .croche_container .vestido,
+    .croche_container .familia,
+    .croche_container .saida_praia,
+     .croche_container .astro{
+        width: 100%;
+        max-width: 200px;
+        margin: 1.2em;
+        border-radius: 20px;
+        transition: .7s;
+    }
+
+    .croche_container img:hover,
+    .croche_container .terezinha:hover,
+    .croche_container .benedito:hover,
+    .croche_container .vestido:hover,
+    .croche_container .familia:hover,
+    .croche_container .saida_praia:hover,
+     .croche_container .astro:hover {
+        width: 100%;
+        max-width: 200px;
+        margin: 1.2em;
+        border-radius: 20px;
+        box-shadow: none;
+        transform: scale(1.05);
+    }
+}
+
+
 
 
 
