--- a/index.css
+++ b/index.css
@@ -13,12 +13,12 @@
 
 /* Estilo do indicador de rolagem (thumb) */
 ::-webkit-scrollbar-thumb {
-  background-color: #8a1607; /* Cor de fundo do indicador de rolagem */
+  background:linear-gradient(50deg, #8a1607, #e92f42) ; /* Cor de fundo do indicador de rolagem */
 }
 
 /* Estilo do indicador de rolagem quando hover */
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #e7341d; /* Cor de fundo do indicador de rolagem ao passar o mouse por cima */
+  background:linear-gradient(50deg, #e92f42, #e28383) /* Cor de fundo do indicador de rolagem ao passar o mouse por cima */
 }
 
 html, body, #root {
@@ -49,3 +49,5 @@ html, body, #root {
       padding: 0; /* Certifique-se de que não há padding */
   }
 }
+
+
