--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
 
 /* Estilo do indicador de rolagem quando hover */
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #e7341d; /* Cor de fundo do indicador de rolagem ao passar o mouse por cima */
+  background:linear-gradient(50deg, #e92f42, #e28383) /* Cor de fundo do indicador de rolagem ao passar o mouse por cima */
 }
 
 html, body, #root {
@@ -49,6 +49,4 @@ html, body, #root {
       padding: 0; /* Certifique-se de que não há padding */
   }
 }
-
-
 
