--- a/src/components/layout/Navbar.module.css
+++ b/src/components/layout/Navbar.module.css
@@ -1,3 +1,7 @@
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -14,6 +18,10 @@
     height: 70px;
     filter: drop-shadow(0 0 10px #e96949) brightness(1.3);
 }
+.navbar img:hover{
+    filter: drop-shadow(0 0 10px #e96949) brightness(1.6);
+}
+
 
 .item a::after{
   content: '';
@@ -86,10 +94,6 @@ ul li:first-child{
   }
 
 }
-
-
-
-
 
 
 
