--- a/components/layout/LinkButton.module.css
+++ b/components/layout/LinkButton.module.css
@@ -6,7 +6,7 @@
     color: #8a1607;
     padding: 0.5em 1em;
     text-decoration: none;
-    transition:  .5s;
+    transition:  1s;
     user-select: none;
     border: 1px solid #8a1607;
     border-radius: 10px;
