--- a/components/pages/Home.module.css
+++ b/components/pages/Home.module.css
@@ -83,7 +83,7 @@
     color: white;
     padding: 0.5em 1em;
     text-decoration: none;
-    transition:  .5s;
+    transition:  1s;
     user-select: none;
     border: 1px solid transparent;
     border-radius: 10px;
