--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Open Sans', 'sans-serif';
+  font-family: "Montserrat", 'sans-serif';
   -webkit-tap-highlight-color: transparent;
 }
 /* Estilo da barra de rolagem */
